content and animation updates

--- a/Projects.html
+++ b/Projects.html
@@ -76,13 +76,13 @@
 
 
 
-    <div class="PreviousProjectsList">
+    <div class="PreviousProjectsList mainPage">
         <div class="subheader">
             <h1>Personal Projects</h1>
         </div>
         <div class="whiteBackground">
             <br>
-            <div class="text" id="ProjPP">
+            <div class="text projCont">
                 <a href="https://github.com/Warbi2601/PersonalPortfolio" class="gitProj">
                     <div class="proj">
                         <div class="projDesc">
@@ -94,7 +94,8 @@
                                 for it.
                                 I worked on this in my spare time alongside University because it's something I
                                 genuinely
-                                enjoy. It is kept regurlary up to date with my recent work.
+                                enjoy. I have tried to keep plugins and frameworks to a bare minimum on purpose in order to better display 
+                                my skills. It is kept regularly up to date with my recent work.
 
                             </p>
                         </div>
@@ -112,7 +113,7 @@
             <h1>2nd Year University Projects</h1>
         </div>
         <div class="greyBackground">
-            <div class="text" id="ProjEW">
+            <div class="text projCont">
                 <a href="https://github.com/Warbi2601/Astro-Events" class="gitProj">
                     <div class="proj">
                         <div class="projDesc">
@@ -133,15 +134,15 @@
                         </div>
                     </div>
                 </a>
-                <a href="http://www.joshwarburton.co.uk/Events-Website" class="footnote">
+                <!-- <a href="http://www.joshwarburton.co.uk/Events-Website" class="footnote">
                     <p>I have hosted the website so that all the functionality can be displayed in full. You can find it
                         here!</p>
-                </a>
+                </a> -->
             </div>
         </div>
 
         <div class="whiteBackground">
-            <div class="text" id="ProjGL">
+            <div class="text projCont">
                 <a href="https://github.com/Warbi2601/OOP-Game-Library" class="gitProj">
                     <div class="proj">
                         <div class="projDesc">
@@ -166,7 +167,7 @@
         </div>
 
         <div class="greyBackground">
-            <div class="text" id="ProjSaM">
+            <div class="text projCont">
                 <a href="https://github.com/Warbi2601/OOP-Assignment-Snake-and-Mouse" class="gitProj">
                     <div class="proj">
                         <div class="projDesc">
@@ -190,7 +191,7 @@
         </div>
 
         <div class="whiteBackground">
-            <div class="text" id="ProjMBS">
+            <div class="text projCont">
                 <a href="https://github.com/Warbi2601/Message-Board-Server" class="gitProj">
                     <div class="proj">
                         <div class="projDesc">
@@ -217,7 +218,7 @@
         </div>
 
         <div class="greyBackground">
-            <div class="text" id="ProjMBC">
+            <div class="text projCont">
                 <a href="https://github.com/Warbi2601/NSD-Client-Message-Board" class="gitProj">
                     <div class="proj">
                         <div class="projDesc">
@@ -242,7 +243,7 @@
         </div>
 
         <div class="whiteBackground">
-            <div class="text" id="ProjWHV">
+            <div class="text projCont">
                 <a href="https://github.com/Warbi2601/Java-Workplace-Hierarchy" class="gitProj">
                     <div class="proj">
                         <div class="projDesc">
@@ -270,7 +271,7 @@
             <h1>1st Year University Projects</h1>
         </div>
         <div class="greyBackground">
-            <div class="text" id="ProjF">
+            <div class="text projCont">
                 <a href="https://github.com/Warbi2601/Bulletin-Board" class="gitProj">
                     <div class="proj">
                         <div class="projDesc">
@@ -296,7 +297,7 @@
         </div>
 
         <div class="whiteBackground">
-            <div class="text" id="ProjBG">
+            <div class="text projCont">
                 <a href="https://github.com/Warbi2601/Breakout-Game" class="gitProj">
                     <div class="proj">
                         <div class="projDesc">
@@ -323,7 +324,7 @@
         </div>
 
         <div class="greyBackground">
-            <div class="text" id="ProjCPS">
+            <div class="text projCont">
                 <a href="https://github.com/Warbi2601/Car-Park-Simulator" class="gitProj">
                     <div class="proj">
                         <div class="projDesc">
@@ -351,7 +352,7 @@
         </div>
 
         <div class="whiteBackground">
-            <div class="text" id="ProjCT">
+            <div class="text projCont">
                 <a href="https://github.com/Warbi2601/Christmas-Tree-Builder" class="gitProj">
                     <div class="proj">
                         <div class="projDesc">
@@ -382,7 +383,7 @@
 
     <footer>
         <p class="lastUpdated">Page Last Updated: </p>
-        <p>Copyright &copy; Josh Warburton 2018</p>
+        <p>Copyright &copy; Josh Warburton <span id="currentYear"></span></p>
         <div class="footerlogo">
             <a href="https://www.linkedin.com/in/joshwarburton/"><img src="Images/LinkedIn.png" alt="" width="40"
                     height="40">
