--- a/Qualifications.html
+++ b/Qualifications.html
@@ -73,30 +73,29 @@
         </div>
     </header>
 
-    <div class="container">
+    <div class="container mainPage">
         <div class="QualList">
 
             <div class="whiteBackground">
                 <div class="text">
                     <div class="qualTitle">
-                        <h4>2017 – Present </h4>
-                        <h4>Sheffield Hallam University</h4>
                         <h4>BEng Software Engineering</h4>
+                        <h4>Sheffield Hallam University</h4>
+                        <h4 class="smallHeading">2017 – Present </h4>
                         <div class="qualDesc">
 
                             <p>
-                                I am currently studying at Sheffield Hallam University where I am learning to develop
-                                programs and websites amongst
-                                other things. I started university with no coding experience but through hard work and
-                                determination managed to
-                                achieve a high first (77.83%) overall in my first year.
+                                I am currently on work placement year from Sheffield Hallam University where I am enrolled on a 
+                                Software Engineering Degree of which I have completed 2 years already. I started university with 
+                                absolutely no coding experience whatsoever but through sheer hard work and determination managed to
+                                achieve a high first (77.83% overall) in my first year, and a first (73.33% overall) again in my second 
+                                year. I consider this to be one of my proudest achievements.
 
                                 <br><br>
 
-                                I am also a course rep meaning I have regular catch up meetings with my course leader to
-                                discuss potential
-                                improvements. I speak to the other students on the course and put together a
-                                comprehensive list of topics that they
+                                I am also a course rep meaning I have regular catch up meetings with my course leader to feedback my 
+                                opinions on the course and discuss potential improvements. In line with my responsibilities, I speak 
+                                to the other students on the course and put together a comprehensive list of topics that they
                                 would like me to raise at the meeting.
                             </p>
                         </div>
@@ -108,9 +107,9 @@
             <div class="greyBackground">
                 <div class="text">
                     <div class="qualTitle">
-                        <h4>2012 – 2014</h4>
-                        <h4>Turton Sixth Form College, Bolton</h4>
                         <h4>A Level's</h4>
+                        <h4>Turton Sixth Form College, Bolton</h4>
+                        <h4 class="smallHeading">2012 – 2014</h4>
 
                         <div class="qualDesc">
 
@@ -141,9 +140,9 @@
                 <div class="text">
                     <div class="qualTitle">
 
-                        <h4> 2007 – 2012</h4>
-                        <h4>Turton High School, Bolton</h4>
                         <h4>GCSE's</h4>
+                        <h4>Turton High School, Bolton</h4>
+                        <h4 class="smallHeading">2007 – 2012</h4>
 
                         <div class="qualDesc">
                             <table>
@@ -200,7 +199,7 @@
 
         <footer>
             <p class="lastUpdated">Page Last Updated: </p>
-            <p>Copyright &copy; Josh Warburton 2018</p>
+            <p>Copyright &copy; Josh Warburton <span id="currentYear"></span></p>
             <div class="footerlogo">
                 <a href="https://www.linkedin.com/in/joshwarburton/"><img src="Images/LinkedIn.png" alt="" width="40"
                         height="40">
