--- a/Recommendations.html
+++ b/Recommendations.html
@@ -73,7 +73,7 @@
         </div>
     </header>
 
-    <div class="container">
+    <div class="container mainPage">
         <div class="recommendationsList">
             <div class="whiteBackground">
                 <div class="recommendation">
@@ -138,7 +138,7 @@
 
     <footer>
         <p class="lastUpdated">Page Last Updated: </p>
-        <p>Copyright &copy; Josh Warburton 2018</p>
+        <p>Copyright &copy; Josh Warburton <span id="currentYear"></span></p>
         <div class="footerlogo">
             <a href="https://www.linkedin.com/in/joshwarburton/"><img src="Images/LinkedIn.png" alt="" width="40"
                     height="40">
