--- a/WorkExperience.html
+++ b/WorkExperience.html
@@ -74,7 +74,7 @@
         </div>
     </header>
 
-    <div class="container">
+    <div class="container mainPage">
         <div>
 
             <div class="WorkExperienceList">
@@ -84,15 +84,14 @@
                             <div class="companyLogo"><img src="Images/TSSLogo.png" alt="" width="126" height="80"></div>
                             <h4>Software Developer</h4>
                             <h4>TSS Infrastructure Services</h4>
-                            <h4>June 2018 - Present</h4>
+                            <h4 class="smallHeading">June 2018 - Present</h4>
                         </div>
 
                         <div class="jobDesc">
                             <p>
                                 When I found out that I had a 4-month break between 1st and 2nd year of University, I
-                                decided
-                                that I wanted to do something valuable with my time and look for a short-term
-                                internship. I found
+                                decided that rather than sit around, I wanted to do something valuable with my time and look for a 
+                                short-term internship. I found
                                 that all the Software Development internships being advertised were for 2nd years+ only.
                                 So, I decided
                                 to source my own opportunity by getting in touch with local companies and ended up being
@@ -100,11 +99,11 @@
                                 at TSS Infrastructure Services.
                                 <br />
                                 <br />
-                                My role here was to use an existing Work Management Platform that was built
+                                My role here was to use an existing Work Management Platform called F0CUS, that was built
                                 in WPF as a base to recreate the
-                                system as a web version using C# MVC ASP.NET with HTML/CSS, Bootstrap, T-SQL, JavaScript
-                                and jQuery. Having no experience with MVC, Bootstrap, JavaScript and jQuery, this role
-                                was a great
+                                system as a web version using C# MVC ASP.NET with HTML/CSS/SASS, Bootstrap, T-SQL, JavaScript
+                                and jQuery amongst other frameworks and plugins. Having no experience with MVC, Bootstrap, JavaScript 
+                                and jQuery, this role was a great
                                 learning curve for me and a
                                 fantastic opportunity to learn some new skills.
                                 <br />
@@ -114,10 +113,15 @@
                                 begin working virtually autonomously after only 3 weeks which was considered a huge
                                 success
                                 considering my
-                                inexperience. In my time at TSS I exceeded all expectations and built 3 main modules of
-                                the Work
-                                Management Platform which handled the payment process for subcontractors amongst other
+                                inexperience. In my time at TSS I exceeded all expectations and built 3 main modules within F0CUS 
+                                which handled the payment process for subcontractors amongst other
                                 things.
+                                <br />
+                                <br />
+                                After a couple of months back at University, TSS contacted me and asked me to continue working for 
+                                them remotely on a casual basis in order to carry on working on F0CUS. I worked for them throughout 
+                                my second year before starting a year long work placement with them in July 2019 as a part of my 
+                                4 year sandwich degree.
                             </p>
                         </div>
                     </div>
@@ -129,7 +133,7 @@
                             <div class="companyLogo"><img src="Images/RZLogo.png" alt="" width="126" height="67"></div>
                             <h4>Recruitment Consultant</h4>
                             <h4>RZ Group</h4>
-                            <h4>January 2017 - July 2017</h4>
+                            <h4 class="smallHeading">January 2017 - July 2017</h4>
                         </div>
 
                         <div class="jobDesc">
@@ -157,7 +161,7 @@
                             </div>
                             <h4>Recruitment Consultant</h4>
                             <h4>Hays Specialist Recruitment</h4>
-                            <h4>October 2015 - December 2016</h4>
+                            <h4 class="smallHeading">October 2015 - December 2016</h4>
                         </div>
 
                         <div class="jobDesc">
@@ -182,7 +186,7 @@
 
     <footer>
         <p class="lastUpdated">Page Last Updated: </p>
-        <p>Copyright &copy; Josh Warburton 2018</p>
+        <p>Copyright &copy; Josh Warburton <span id="currentYear"></span></p>
         <div class="footerlogo">
             <a href="https://www.linkedin.com/in/joshwarburton/"><img src="Images/LinkedIn.png" alt="" width="40"
                     height="40">
