--- a/index.html
+++ b/index.html
@@ -66,14 +66,14 @@
                     <div class="circle">
                         <img src="Images/Logo2018.png">
                     </div>
-                    <div class='BannerCont-scroll'></div>
+                    <div class="BannerCont-scroll"></div>
                 </div>
             </div>
 
         </div>
     </header>
 
-    <div class="container">
+    <div class="container mainPage">
         <div class="AboutMeList">
             <div class="whiteBackground">
                 <div class="text">
@@ -108,15 +108,12 @@
                         skills in order
                         to give myself the best chance in my career possible. I do this because it is something I
                         genuinely have a
-                        passion for and enjoy.
+                        passion for and enjoy doing everyday.
                     </p>
 
                     <p><br>
-                        When I got my first opportunity to work as a Software Developer during a summer internship with
-                        TSS
-                        Infrastructure Services, I had some knowledge of ASP.NET however I had never used MVC before.
-                        This was a
-                        great platform for me to further my skills with a new technology. Lastly, I began learning PHP
+                        In terms of back end development, I feel that i now have very strong knowledge when it comes to the Microsoft 
+                        stack (C#, .NET MVC, T-SQL etc.) as well as the LAMP stack. I began learning PHP
                         at the
                         beginning of my second year in University and it's used in this website amongst other projects.
                     </p>
@@ -136,7 +133,7 @@
                 <div class="text">
                     <p>
                         Web Development is a big passion of mine (as you may be able to tell by this website) and is
-                        also the aspect of
+                        also the aspect of software 
                         development that I am most comfortable with. My first foray into Web Development was at the
                         beginning of
                         my first year in University and it was creating a personal portfolio website like this one. I
@@ -153,7 +150,14 @@
                         personal
                         portfolio website, that I could recreate it to be way better, more user friendly and functional
                         than
-                        the old one. That's when I decided to create this website.
+                        the old one. That's when I decided to create this website. I have left the link to the GitHub repository for 
+                        the original site in the projects tab in order to display the progression of my skills.
+                    </p>
+
+                    <p><br />
+                        Between the massive step up in focus on web development in my second year of University, and getting 
+                        hands on experience working for TSS, my web development skills came on leaps and bounds. I now find myself 
+                        being a competent web developer with a good eye for detail and design and a massive focus on User Experience.
                     </p>
 
                     <div class="codeLogoList">
@@ -169,7 +173,7 @@
             </div>
 
             <div class="greyBackground">
-                <h1 class="pageTitle">Source Control & Databases</h1>
+                <h1 class="pageTitle">Planning, Source Control & Databases</h1>
                 <div class="text">
 
                     <h3>Source Control</h3>
@@ -179,12 +183,21 @@
                         partly because it
                         gives me a platform to share my work to a wider audience and also because I find it to be a
                         really user friendly
-                        bit of software. Whilst I was working with TSS Infrastructure I was exposed to Visual Studio's
-                        inbuilt Team
-                        Foundation Server as a way of source control and as a result, this is also something I'm very
-                        comfortable with.
+                        bit of software. TSS introduced me to Team Foundation Server as a method of source control and through using it 
+                        everyday I am comfortable in using that too.
                     </p>
 
+                    <h3>Project Planning</h3>
+
+                    <p>
+                        Project planning is something I consider to be extremely important to any software development process. 
+                        I have used the Atlassian package (as part of a University project) including Jira as well as Azure DevOps 
+                        which I use on a daily basis at work.
+
+                        I use these tools to their full effect for implementing agile procceses and using scrum boards, user stories etc. 
+                        I also use them as an effective bug logging tool and find they are a great way to manage team work between developers.
+                    </p>
+                        
                     <h3>Databases</h3>
 
                     <p>
@@ -193,7 +206,7 @@
                         have used both Oracle SQL Developer and MySQL (alongside PHP) whereas I have used SQL Server
                         Management Studio
                         in a commercial environment. SQL is something I feel very comfortable with irrespective of
-                        environment.
+                        environment. I also have experience in using the NOSQL database, firebase.
                     </p>
 
                     <div class="codeLogoList">
@@ -209,13 +222,33 @@
                 </div>
             </div>
 
+            <div class="whiteBackground">
+                    <h1 class="pageTitle">Mobile Development</h1>
+                    <div class="text">
+                        <p>
+                            My main experience with mobile development came from a University project. The spec was to build an app 
+                            as a prototype for a local company in Sheffield who wanted to scope out a project before they undertook it theirselves. 
+                            The app was built in Android Studio with Java and was for door to door salesmen to use whilst they are out selling to small business'. 
+
+                        </p>
+
+                        <p><br>
+                            It featured a login system followed by a map that showed a pin to represent every local business in that 
+                            sales persons catchment area. There was then color coding to display whether the business was a current 
+                            customer, previous customer or new prospect. The pins were then of a different opacity value depending on 
+                            how rich of a prospect they were based on a formula I worked out. You could then click on the pin and 
+                            it would then display all the known information about that company. It was linked with a firebase database 
+                            to handle all the neccessary transactions.
+                        </p>
+                    </div>
+                </div>
 
         </div>
     </div>
 
     <footer>
         <p class="lastUpdated">Page Last Updated: </p>
-        <p>Copyright &copy; Josh Warburton 2018</p>
+        <p>Copyright &copy; Josh Warburton <span id="currentYear"></span></p>
         <div class="footerlogo">
             <a href="https://www.linkedin.com/in/joshwarburton/"><img src="Images/LinkedIn.png" alt="" width="40"
                     height="40">
