--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                         skills in order
                         to give myself the best chance in my career possible. I do this because it is something I
                         genuinely have a
-                        passion for and enjoy doing everyday.
+                        passion for and enjoy doing every day.
                     </p>
 
                     <p><br>
@@ -142,7 +142,7 @@
                         where I really
                         got my teeth into the finer details of Web Development. I learned JavaScript, jQuery, Bootstrap
                         and went much
-                        deeper into HTML/CSS (alongside other back-end/database languages).
+                        deeper into HTML/CSS (alongside other back end/database languages).
                     </p>
 
                     <p><br />
@@ -184,7 +184,7 @@
                         gives me a platform to share my work to a wider audience and also because I find it to be a
                         really user friendly
                         bit of software. TSS introduced me to Team Foundation Server as a method of source control and through using it 
-                        everyday I am comfortable in using that too.
+                        every day I am comfortable in using that too.
                     </p>
 
                     <h3>Project Planning</h3>
@@ -194,8 +194,8 @@
                         I have used the Atlassian package (as part of a University project) including Jira as well as Azure DevOps 
                         which I use on a daily basis at work.
 
-                        I use these tools to their full effect for implementing agile procceses and using scrum boards, user stories etc. 
-                        I also use them as an effective bug logging tool and find they are a great way to manage team work between developers.
+                        I use these tools to their full effect for implementing agile processes and using scrum boards, user stories etc. 
+                        I also use them as an effective bug logging tool and find they are a great way to manage work between developers.
                     </p>
                         
                     <h3>Databases</h3>
@@ -227,18 +227,18 @@
                     <div class="text">
                         <p>
                             My main experience with mobile development came from a University project. The spec was to build an app 
-                            as a prototype for a local company in Sheffield who wanted to scope out a project before they undertook it theirselves. 
-                            The app was built in Android Studio with Java and was for door to door salesmen to use whilst they are out selling to small business'. 
+                            as a prototype for a local company in Sheffield who wanted to scope out a project before they undertook it their selves. 
+                            The app was built in Android Studio with Java and was for door to door salesmen to use whilst they are out selling to small businesses. 
 
                         </p>
 
                         <p><br>
                             It featured a login system followed by a map that showed a pin to represent every local business in that 
-                            sales persons catchment area. There was then color coding to display whether the business was a current 
+                            salespersons catchment area. There was then colour coding to display whether the business was a current 
                             customer, previous customer or new prospect. The pins were then of a different opacity value depending on 
                             how rich of a prospect they were based on a formula I worked out. You could then click on the pin and 
                             it would then display all the known information about that company. It was linked with a firebase database 
-                            to handle all the neccessary transactions.
+                            to handle all the necessary transactions.
                         </p>
                     </div>
                 </div>
