--- a/Projects.html
+++ b/Projects.html
@@ -94,8 +94,8 @@
                                 for it.
                                 I worked on this in my spare time alongside University because it's something I
                                 genuinely
-                                enjoy. I have tried to keep plugins and frameworks to a bare minimum on purpose in order to better display 
-                                my skills. It is kept regularly up to date with my recent work.
+                                enjoy. I have purposely tried to keep plugins and frameworks to a bare minimum in order to better display 
+                                my skills. It is regularly kept up to date with my recent work.
 
                             </p>
                         </div>
@@ -177,7 +177,7 @@
                                 Grid-style game where the user plays as a mouse who's objective is to find a nut and
                                 escape
                                 down a hole. The game inluded many extra features such as cheats, time based
-                                bombs and a snake tail among others.
+                                bombs and a snake tail amongst others.
                             </p>
                         </div>
                         <div class="imgWrapper">
@@ -227,8 +227,8 @@
                             <p>
                                 This is a client that was created to work alongside a server also created by myself
                                 to function together as a message board using JSON. Functionality included: Fully
-                                customizable colours,
-                                picture message capability, subscriber list, seperate thread for contacting the server
+                                customisable colours,
+                                picture message capability, subscriber list, separate thread for contacting the server
                                 to get new messages.
                             </p>
                         </div>
@@ -250,7 +250,7 @@
                             <h2>Workplace Hierarchy Viewer</h2>
                             <p><strong>Written In: Java</strong></p>
                             <p>
-                                This program is designed to take a .csv file of employee details and read it in to
+                                This program is designed to take a .csv file of employee details and read it into
                                 various
                                 collections of objects. It will then calculate a company hierarchy and output it in a
                                 tree
@@ -279,11 +279,9 @@
                             <p><strong>Written In: C# ASP.NET, HTML, CSS, SQL</strong></p>
                             <p>
                                 It has the functionality to
-                                create users, boards, post on those boards, view all the posts that user has
+                                create users, boards, post on those boards, view all the posts that a user has
                                 made and change password etc.
-                                The administrator account can also view all the users account details and delete other
-                                users.
-                                This was my first experience with ASP.NET and taught me a lot.
+                                The administrator account can also view all the users account details and delete users.
                             </p>
                         </div>
                         <div class="imgWrapper">
@@ -302,12 +300,12 @@
                     <div class="proj">
                         <div class="projDesc">
                             <h2>Breakout Game</h2>
-                            <p><strong>Written In: C#</strong></p>
+                            <p><strong>Written In: C# Windows Forms</strong></p>
                             <p>
-                                It was developed in C# Windows Forms. The final version of the
-                                game includes numerous features including randomised colouring of each block,
+                                The final version of the
+                                game includes numerous features such as randomised colouring of each block,
                                 endless
-                                generating levels that show a running points tally as you
+                                generating levels, a running points tally as you
                                 progress through shown on each "Next Level" and "End
                                 Game"
                                 Screen.
@@ -359,9 +357,9 @@
                             <h2>Christmas Tree</h2>
                             <p><strong>Written In: C++</strong></p>
                             <p>
-                                This is a a simple program that's key function is to take a number and
-                                print a Christmas Tree of that height. The program includes a few
-                                extra features outside what was asked of me including relevant colours for the tree,
+                                This is a simple program that's key function is to take a number and
+                                print a Christmas Tree of that height. The program includes additional
+                                features outside what was asked of me including relevant colours for the tree,
                                 trunk
                                 and decoration as well as a
                                 random decoration atop the tree each time.
