--- a/index.html
+++ b/index.html
@@ -106,13 +106,13 @@
                         programming in C++
                         as well as learning Java from the ground up. I like going the extra mile when learning new
                         skills in order
-                        to give myself the best chance in my career possible. I do this because it is something I
+                        to give myself the best possible chance in my career. I do this because it is something I
                         genuinely have a
                         passion for and enjoy doing every day.
                     </p>
 
                     <p><br>
-                        In terms of back end development, I feel that i now have very strong knowledge when it comes to the Microsoft 
+                        In terms of back end development, I feel that I now have very strong knowledge when it comes to the Microsoft 
                         stack (C#, .NET MVC, T-SQL etc.) as well as the LAMP stack. I began learning PHP
                         at the
                         beginning of my second year in University and it's used in this website amongst other projects.
@@ -146,9 +146,9 @@
                     </p>
 
                     <p><br />
-                        I decided that with all the skills and knowledge I had compared to when I first created my
+                        I decided that with the additional skills and knowledge I had compared to when I first created my
                         personal
-                        portfolio website, that I could recreate it to be way better, more user friendly and functional
+                        portfolio website, that I could recreate it to be considerably better, more user friendly and functional
                         than
                         the old one. That's when I decided to create this website. I have left the link to the GitHub repository for 
                         the original site in the projects tab in order to display the progression of my skills.
@@ -227,8 +227,8 @@
                     <div class="text">
                         <p>
                             My main experience with mobile development came from a University project. The spec was to build an app 
-                            as a prototype for a local company in Sheffield who wanted to scope out a project before they undertook it their selves. 
-                            The app was built in Android Studio with Java and was for door to door salesmen to use whilst they are out selling to small businesses. 
+                            as a prototype for a local company in Sheffield who wanted to scope out a project before they undertook it themselves. 
+                            The app was built in Android Studio with Java and was for door to door salesmen to use in the field. 
 
                         </p>
 
