--- a/WorkExperience.html
+++ b/WorkExperience.html
@@ -84,7 +84,7 @@
                             <div class="companyLogo"><img src="Images/TSSLogo.png" alt="" width="126" height="80"></div>
                             <h4>Software Developer</h4>
                             <h4>TSS Infrastructure Services</h4>
-                            <h4 class="smallHeading">June 2018 - Present</h4>
+                            <h4 class="smallHeading">June 2018 - December 2021</h4>
                         </div>
 
                         <div class="jobDesc">
